# ProjectPidgeon

./: CITATION.cff  CONTRIBUTING.md  DOCKER_GUIDE.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  PidgeonProtocol.md  QUICKSTART.md  README.md  WINDOWS_GUIDE.md  design.md  docker-compose.yml  docker-start.ps1  env.template  pyproject.toml  queue_paper.md  requirements.md  setup.sh  tasks.md
config/: agent_routing.yaml  settings.docker.yaml  settings.yaml
examples/: __init__.py
examples/document_pipeline/: __init__.py  run_all.sh  run_demo.py  sample_data.py
pidgeon/: __init__.py
pidgeon/agents/: __init__.py  __main__.py  analysis_agent.py  base_agent.py  extraction_agent.py  summarization_agent.py
pidgeon/core/: __init__.py  config.py  models.py  queue_factory.py  queue_interface.py
pidgeon/gateway/: __init__.py  llm_gateway.py
pidgeon/implementations/: __init__.py  memory_queue.py  redis_queue.py
pidgeon/interpreter/: __init__.py  __main__.py  interpreter.py
pidgeon/planner/: __init__.py  __main__.py  planner.py
pidgeon/supervisor/: __init__.py  __main__.py  supervisor.py
pidgeon_protocol.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: __init__.py
tests/fixtures/: __init__.py
tests/integration/: __init__.py  test_workflow.py
tests/unit/: __init__.py  test_memory_queue.py  test_models.py
whitepapers/: privacy_data_protection_whitepaper.md
